orgs/claim-core/force-app/main/default/objects/Claim__c/Claim__c.object-meta.xml
<CustomObject>
    <description>Object used to track and manage insurance claims within the organization.</description>
    <label>Claim</label>
    <nameField>
        <displayFormat>CLM-{0000}</displayFormat>
        <label>Claim Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>