orgs/claim-core/force-app/main/default/objects/Claim__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>