orgs/claim-core/force-app/main/default/objects/Claim__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Name of the customer filing the claim</description>
    <label>Customer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>