orgs/claim-core/force-app/main/default/objects/Claim__c/fields/Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost__c</fullName>
    <description>Estimated cost of the claim repair or settlement</description>
    <label>Estimated Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>