orgs/claim-core/force-app/main/default/objects/Claim__c/fields/MCP_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>MCP_Request_Id__c</fullName>
    <description>MCP API request identifier for tracking external integrations</description>
    <externalId>true</externalId>
    <label>MCP Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>