orgs/claim-core/force-app/main/default/objects/Claim__c/fields/Supervisor_Approval__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the claim has received supervisor approval</description>
    <label>Supervisor Approval</label>
    <type>Checkbox</type>
</CustomField>