orgs/claim-core/force-app/main/default/objects/Claim__c/fields/Validation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Validation_Reason__c</fullName>
    <label>Validation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>