orgs/claim-core/force-app/main/default/objects/Claim__c/recordTypes/Natural_Disaster.recordType-meta.xml
<RecordType>
    <fullName>Natural_Disaster</fullName>
    <active>true</active>
    <description>Claims related to natural disasters</description>
    <label>Natural Disaster</label>
</RecordType>