orgs/claim-core/force-app/main/default/objects/Claim__c/recordTypes/Theft.recordType-meta.xml
<RecordType>
    <fullName>Theft</fullName>
    <active>true</active>
    <description>Claims related to vehicle theft</description>
    <label>Theft</label>
</RecordType>